# libcomposition

./: .gitignore  CHANGELOG.md  Doxyfile  meson.build  meson_options.txt  readme.md
benchmarks/: meson.build
benchmarks/ConstructionAndIteration/: benchmark_composition_construction_and_iteration.cpp  meson.build
benchmarks/hashing/: benchmark_composition_hash.cpp  meson.build
benchmarks/utils/: benchmark_utils.h
build-config/: meson.build
build-config/fourdst/: meson.build
build-config/fourdst/libconfig/: meson.build
build-config/fourdst/libconstants/: meson.build
build-config/fourdst/liblogging/: meson.build
cross/: wasm.ini
docs/: index.html
docs/html/: annotated.html  annotated_dup.js  atomic_8dox.html  atomic_species_8h.html  atomic_species_8h.js  atomic_species_8h__dep__incl.map  atomic_species_8h__dep__incl.md5  atomic_species_8h__incl.map  atomic_species_8h__incl.md5  atomic_species_8h_source.html  class_composition_abstract-members.html  class_composition_abstract.html  class_composition_abstract.js  class_composition_abstract__inherit__graph.map  class_composition_abstract__inherit__graph.md5  classes.html  classfourdst_1_1composition_1_1_composition-members.html  classfourdst_1_1composition_1_1_composition.html  classfourdst_1_1composition_1_1_composition.js  classfourdst_1_1composition_1_1_composition__coll__graph.map  classfourdst_1_1composition_1_1_composition__coll__graph.md5  classfourdst_1_1composition_1_1_composition__inherit__graph.map  classfourdst_1_1composition_1_1_composition__inherit__graph.md5  classfourdst_1_1composition_1_1_composition_abstract-members.html  classfourdst_1_1composition_1_1_composition_abstract.html  classfourdst_1_1composition_1_1_composition_abstract.js  classfourdst_1_1composition_1_1_composition_abstract__inherit__graph.map  classfourdst_1_1composition_1_1_composition_abstract__inherit__graph.md5  classfourdst_1_1composition_1_1_composition_decorator-members.html  classfourdst_1_1composition_1_1_composition_decorator.html  classfourdst_1_1composition_1_1_composition_decorator.js  classfourdst_1_1composition_1_1_composition_decorator__coll__graph.map  classfourdst_1_1composition_1_1_composition_decorator__coll__graph.md5  classfourdst_1_1composition_1_1_composition_decorator__inherit__graph.map  classfourdst_1_1composition_1_1_composition_decorator__inherit__graph.md5  classfourdst_1_1composition_1_1_masked_composition-members.html  classfourdst_1_1composition_1_1_masked_composition.html  classfourdst_1_1composition_1_1_masked_composition.js  classfourdst_1_1composition_1_1_masked_composition__coll__graph.map  classfourdst_1_1composition_1_1_masked_composition__coll__graph.md5  (+402 more)
docs/latex/: annotated.tex  atomic_8dox.tex  atomic_species_8h.tex  atomic_species_8h__dep__incl.md5  atomic_species_8h__incl.md5  atomic_species_8h_source.tex  class_composition_abstract.tex  class_composition_abstract__inherit__graph.md5  classfourdst_1_1composition_1_1_composition.tex  classfourdst_1_1composition_1_1_composition__coll__graph.md5  classfourdst_1_1composition_1_1_composition__inherit__graph.md5  classfourdst_1_1composition_1_1_composition_abstract.tex  classfourdst_1_1composition_1_1_composition_abstract__inherit__graph.md5  classfourdst_1_1composition_1_1_composition_decorator.tex  classfourdst_1_1composition_1_1_composition_decorator__coll__graph.md5  classfourdst_1_1composition_1_1_composition_decorator__inherit__graph.md5  classfourdst_1_1composition_1_1_masked_composition.tex  classfourdst_1_1composition_1_1_masked_composition__coll__graph.md5  classfourdst_1_1composition_1_1_masked_composition__inherit__graph.md5  classfourdst_1_1composition_1_1detail_1_1_composition_iterator.tex  classfourdst_1_1composition_1_1detail_1_1_composition_iterator__coll__graph.md5  classfourdst_1_1composition_1_1exceptions_1_1_composition_entry_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_composition_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_composition_error__coll__graph.md5  classfourdst_1_1composition_1_1exceptions_1_1_composition_error__inherit__graph.md5  classfourdst_1_1composition_1_1exceptions_1_1_composition_mode_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_composition_not_finalized_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_entry_already_initialized_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_failed_to_finalize_composition_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_invalid_composition_error.tex  classfourdst_1_1composition_1_1exceptions_1_1_invalid_composition_error__coll__graph.md5  classfourdst_1_1composition_1_1exceptions_1_1_invalid_composition_error__inherit__graph.md5  classfourdst_1_1composition_1_1exceptions_1_1_invalid_mixing_mode.tex  classfourdst_1_1composition_1_1exceptions_1_1_invalid_species_symbol_error.tex  (+106 more)
examples/: meson.build  simple.cpp
src/: meson.build
src/composition/: meson.build
src/composition/include/fourdst/: config.h.in
src/composition/include/fourdst/atomic/: atomic.dox  atomicSpecies.h  species.h
src/composition/include/fourdst/composition/: atomicSpecies.h  composition.dox  composition.h  composition_abstract.h  elements.h  species.h  utils.h
src/composition/include/fourdst/composition/decorators/: composition_decorator_abstract.h  composition_masked.h
src/composition/include/fourdst/composition/exceptions/: exceptions_composition.h
src/composition/include/fourdst/composition/io/: StandardAbundancesBinary.h  StandardMetalFractionsBinary.h  standard_compositions.h
src/composition/include/fourdst/composition/iterators/: composition_abstract_iterator.h
src/composition/include/fourdst/composition/utils/: composition_hash.h
src/composition/lib/: composition.cpp  utils.cpp
src/composition/lib/decorators/: composition_masked.cpp
src/composition/lib/io/: standard_compositions.cpp
src/composition/private/: composition.cpp  composition.h
src/composition/public/: composition.h
subprojects/: libconfig.wrap  libconstants.wrap  liblogging.wrap  quill.wrap
tests/: meson.build
utils/atomic/: format.py  (+3 more)
(+105 files in other folders)
