option('pkg_config', type: 'boolean', value: true, description: 'generate pkg-config file for libcomposition (fourdst_composition.pc)')
option('build_tests', type: 'boolean', value: true, description: 'build unit tests (uses gtest)')
option('build_examples', type: 'boolean', value: true, description: 'build example programs')
option('build_benchmarks', type: 'boolean', value: false, description: 'build benchmark programs')
option('build_python', type: 'boolean', value: false, description: 'Build in python mode. Note that this does not generate a wheel; rather, this is the appropriate option to turn on when packaging this component inside of a wheel.')
